parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> INT MAIN L_PARENTESE R_PARENTESE L_CHAVE stm RETURN expression PONTO_VIRGULA R_CHAVE
Rule 2     stm -> declaracao
Rule 3     stm -> equacao
Rule 4     stm -> condicional
Rule 5     stm -> estrutura_repeticao
Rule 6     stm -> mostrar
Rule 7     stm -> entrada
Rule 8     stm -> break
Rule 9     stm -> continue
Rule 10    stm -> bloco_stm
Rule 11    stm -> lambda
Rule 12    bloco_stm -> bloco stm
Rule 13    lambda -> <empty>
Rule 14    break -> BREAK PONTO_VIRGULA stm
Rule 15    continue -> CONTINUE PONTO_VIRGULA stm
Rule 16    tipo -> tipo_VOID
Rule 17    tipo -> tipo_BOOLEAN
Rule 18    tipo -> tipo_CHAR
Rule 19    tipo -> tipo_INT
Rule 20    tipo -> tipo_FLOAT
Rule 21    tipo_VOID -> VOID
Rule 22    tipo_BOOLEAN -> BOOLEAN
Rule 23    tipo_CHAR -> CHAR
Rule 24    tipo_INT -> INT
Rule 25    tipo_FLOAT -> FLOAT
Rule 26    bloco -> L_CHAVE stm R_CHAVE
Rule 27    pointer -> pointer ASTERISCO
Rule 28    pointer -> lambda
Rule 29    declaracao -> tipo pointer ID PONTO_VIRGULA stm
Rule 30    declaracao -> tipo pointer ID ATRIBUICAO expression PONTO_VIRGULA stm
Rule 31    declaracao -> tipo pointer ID L_COCHETE arg R_COCHETE PONTO_VIRGULA stm
Rule 32    declaracao -> tipo pointer ID L_COCHETE arg R_COCHETE ATRIBUICAO atribuicao_mat PONTO_VIRGULA stm
Rule 33    declaracao -> tipo pointer ID L_COCHETE arg R_COCHETE L_COCHETE arg R_COCHETE more_arg PONTO_VIRGULA stm
Rule 34    declaracao -> tipo pointer ID L_COCHETE arg R_COCHETE L_COCHETE arg R_COCHETE more_arg ATRIBUICAO L_CHAVE atribuicao_mat R_CHAVE PONTO_VIRGULA stm
Rule 35    atribuicao_vet -> expression VIRGULA atribuicao_vet
Rule 36    atribuicao_vet -> expression
Rule 37    atribuicao_mat -> L_CHAVE atribuicao_vet R_CHAVE VIRGULA atribuicao_mat
Rule 38    atribuicao_mat -> L_CHAVE atribuicao_vet R_CHAVE
Rule 39    equacao -> pointer ID L_COCHETE arg R_COCHETE ATRIBUICAO expression PONTO_VIRGULA stm
Rule 40    equacao -> pointer ID L_COCHETE arg R_COCHETE L_COCHETE arg R_COCHETE more_arg ATRIBUICAO expression PONTO_VIRGULA stm
Rule 41    equacao -> pointer ID ATRIBUICAO expression PONTO_VIRGULA stm
Rule 42    arg -> expression
Rule 43    arg -> lambda
Rule 44    more_arg -> more_arg L_COCHETE arg R_COCHETE
Rule 45    more_arg -> lambda
Rule 46    mostrar -> mostrar1
Rule 47    mostrar -> mostrar2
Rule 48    mostrar1 -> PRINTF L_PARENTESE CONST_STRING R_PARENTESE PONTO_VIRGULA stm
Rule 49    mostrar2 -> PRINTF L_PARENTESE expression_mostrar R_PARENTESE PONTO_VIRGULA stm
Rule 50    expression_mostrar -> CONST_STRING VIRGULA expression expression_mostrar
Rule 51    expression_mostrar -> VIRGULA expression
Rule 52    expression_mostrar -> lambda
Rule 53    entrada -> SCANF L_PARENTESE expression_entrada R_PARENTESE PONTO_VIRGULA stm
Rule 54    expression_entrada -> CONST_STRING VIRGULA E_COMERCIAL ID expression_entrada
Rule 55    expression_entrada -> VIRGULA E_COMERCIAL ID expression_entrada
Rule 56    expression_entrada -> lambda
Rule 57    exp_and -> exp AND exp
Rule 58    exp_ou -> exp OU exp
Rule 59    exp_menor -> exp MENOR exp
Rule 60    exp_maior -> exp MAIOR exp
Rule 61    exp_menor_igual -> exp MENOR_IGUAL exp
Rule 62    exp_maior_igual -> exp MAIOR_IGUAL exp
Rule 63    exp_igual -> exp IGUAL exp
Rule 64    exp_diferente -> exp DIFERENTE exp
Rule 65    exp_menos -> exp MENOS exp
Rule 66    exp_mais -> exp MAIS exp
Rule 67    exp_asterisco -> exp ASTERISCO exp
Rule 68    exp_barra -> exp BARRA exp
Rule 69    exp_mod -> exp MOD exp
Rule 70    menos_exp -> MENOS exp
Rule 71    mais_exp -> MAIS exp
Rule 72    asterisco_exp -> ASTERISCO exp
Rule 73    negacao_exp -> NEGACAO exp
Rule 74    e_comercial_exp -> E_COMERCIAL exp
Rule 75    const_virgula -> VIRGULA
Rule 76    const_ponto -> PONTO
Rule 77    const_numero_real -> NUMERO_REAL
Rule 78    const_numero_int -> NUMERO_INT
Rule 79    const_char -> CONST_CHAR
Rule 80    const_string -> CONST_STRING
Rule 81    mais_mais -> MAIS_MAIS
Rule 82    menos_menos -> MENOS_MENOS
Rule 83    id -> ID
Rule 84    true -> TRUE
Rule 85    false -> FALSE
Rule 86    id_atribuicao_exp -> ID ATRIBUICAO exp
Rule 87    id_cochete_exp -> ID L_COCHETE exp R_COCHETE
Rule 88    parentese_exp -> L_PARENTESE exp R_PARENTESE
Rule 89    chave_exp -> L_CHAVE exp R_CHAVE
Rule 90    exp -> exp_and
Rule 91    exp -> exp_ou
Rule 92    exp -> exp_menor
Rule 93    exp -> exp_maior
Rule 94    exp -> exp_menor_igual
Rule 95    exp -> exp_maior_igual
Rule 96    exp -> exp_igual
Rule 97    exp -> exp_diferente
Rule 98    exp -> exp_menos
Rule 99    exp -> exp_mais
Rule 100   exp -> exp_asterisco
Rule 101   exp -> exp_barra
Rule 102   exp -> exp_mod
Rule 103   exp -> menos_exp
Rule 104   exp -> mais_exp
Rule 105   exp -> asterisco_exp
Rule 106   exp -> negacao_exp
Rule 107   exp -> e_comercial_exp
Rule 108   exp -> const_virgula
Rule 109   exp -> const_ponto
Rule 110   exp -> const_numero_real
Rule 111   exp -> const_numero_int
Rule 112   exp -> const_char
Rule 113   exp -> const_string
Rule 114   exp -> mais_mais
Rule 115   exp -> menos_menos
Rule 116   exp -> id
Rule 117   exp -> true
Rule 118   exp -> false
Rule 119   exp -> id_atribuicao_exp
Rule 120   exp -> id_cochete_exp
Rule 121   exp -> parentese_exp
Rule 122   exp -> chave_exp
Rule 123   expression -> exp
Rule 124   expression -> extras
Rule 125   expression -> aspa_dupla_exp
Rule 126   expression -> aspa_simples_exp
Rule 127   aspa_dupla_exp -> ASPA_DUPLA exp ASPA_DUPLA
Rule 128   aspa_simples_exp -> ASPA_SIMPLES exp ASPA_SIMPLES
Rule 129   extras -> L_PARENTESE tipo R_PARENTESE exp
Rule 130   condicional -> IF L_PARENTESE expression R_PARENTESE stm
Rule 131   condicional -> IF L_PARENTESE expression R_PARENTESE stm ELSE stm
Rule 132   estrutura_repeticao -> for
Rule 133   estrutura_repeticao -> while
Rule 134   estrutura_repeticao -> do_while
Rule 135   for -> FOR L_PARENTESE tipo ID ATRIBUICAO expression PONTO_VIRGULA arg PONTO_VIRGULA arg R_PARENTESE bloco stm
Rule 136   for -> FOR L_PARENTESE arg PONTO_VIRGULA arg PONTO_VIRGULA arg R_PARENTESE bloco stm
Rule 137   while -> WHILE L_PARENTESE expression R_PARENTESE bloco stm
Rule 138   do_while -> DO bloco WHILE L_PARENTESE expression R_PARENTESE PONTO_VIRGULA stm

Terminals, with rules where they appear

AND                  : 57
ASPA_DUPLA           : 127 127
ASPA_SIMPLES         : 128 128
ASTERISCO            : 27 67 72
ATRIBUICAO           : 30 32 34 39 40 41 86 135
BARRA                : 68
BOOLEAN              : 22
BREAK                : 14
CHAR                 : 23
CONST_CHAR           : 79
CONST_STRING         : 48 50 54 80
CONTINUE             : 15
DIFERENTE            : 64
DO                   : 138
ELSE                 : 131
E_COMERCIAL          : 54 55 74
FALSE                : 85
FLOAT                : 25
FOR                  : 135 136
ID                   : 29 30 31 32 33 34 39 40 41 54 55 83 86 87 135
IF                   : 130 131
IGUAL                : 63
INT                  : 1 24
L_CHAVE              : 1 26 34 37 38 89
L_COCHETE            : 31 32 33 33 34 34 39 40 40 44 87
L_PARENTESE          : 1 48 49 53 88 129 130 131 135 136 137 138
MAIN                 : 1
MAIOR                : 60
MAIOR_IGUAL          : 62
MAIS                 : 66 71
MAIS_MAIS            : 81
MENOR                : 59
MENOR_IGUAL          : 61
MENOS                : 65 70
MENOS_MENOS          : 82
MOD                  : 69
NEGACAO              : 73
NUMERO_INT           : 78
NUMERO_REAL          : 77
OU                   : 58
PONTO                : 76
PONTO_VIRGULA        : 1 14 15 29 30 31 32 33 34 39 40 41 48 49 53 135 135 136 136 138
PRINTF               : 48 49
RETURN               : 1
R_CHAVE              : 1 26 34 37 38 89
R_COCHETE            : 31 32 33 33 34 34 39 40 40 44 87
R_PARENTESE          : 1 48 49 53 88 129 130 131 135 136 137 138
SCANF                : 53
TRUE                 : 84
VIRGULA              : 35 37 50 51 54 55 75
VOID                 : 21
WHILE                : 137 138
error                : 

Nonterminals, with rules where they appear

arg                  : 31 32 33 33 34 34 39 40 40 44 135 135 136 136 136
aspa_dupla_exp       : 125
aspa_simples_exp     : 126
asterisco_exp        : 105
atribuicao_mat       : 32 34 37
atribuicao_vet       : 35 37 38
bloco                : 12 135 136 137 138
bloco_stm            : 10
break                : 8
chave_exp            : 122
condicional          : 4
const_char           : 112
const_numero_int     : 111
const_numero_real    : 110
const_ponto          : 109
const_string         : 113
const_virgula        : 108
continue             : 9
declaracao           : 2
do_while             : 134
e_comercial_exp      : 107
entrada              : 7
equacao              : 3
estrutura_repeticao  : 5
exp                  : 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 71 72 73 74 86 87 88 89 123 127 128 129
exp_and              : 90
exp_asterisco        : 100
exp_barra            : 101
exp_diferente        : 97
exp_igual            : 96
exp_maior            : 93
exp_maior_igual      : 95
exp_mais             : 99
exp_menor            : 92
exp_menor_igual      : 94
exp_menos            : 98
exp_mod              : 102
exp_ou               : 91
expression           : 1 30 35 36 39 40 41 42 50 51 130 131 135 137 138
expression_entrada   : 53 54 55
expression_mostrar   : 49 50
extras               : 124
false                : 118
for                  : 132
id                   : 116
id_atribuicao_exp    : 119
id_cochete_exp       : 120
lambda               : 11 28 43 45 52 56
main                 : 0
mais_exp             : 104
mais_mais            : 114
menos_exp            : 103
menos_menos          : 115
more_arg             : 33 34 40 44
mostrar              : 6
mostrar1             : 46
mostrar2             : 47
negacao_exp          : 106
parentese_exp        : 121
pointer              : 27 29 30 31 32 33 34 39 40 41
stm                  : 1 12 14 15 26 29 30 31 32 33 34 39 40 41 48 49 53 130 131 131 135 136 137 138
tipo                 : 29 30 31 32 33 34 129 135
tipo_BOOLEAN         : 17
tipo_CHAR            : 18
tipo_FLOAT           : 20
tipo_INT             : 19
tipo_VOID            : 16
true                 : 117
while                : 133

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . INT MAIN L_PARENTESE R_PARENTESE L_CHAVE stm RETURN expression PONTO_VIRGULA R_CHAVE

    INT             shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> INT . MAIN L_PARENTESE R_PARENTESE L_CHAVE stm RETURN expression PONTO_VIRGULA R_CHAVE

    MAIN            shift and go to state 3


state 3

    (1) main -> INT MAIN . L_PARENTESE R_PARENTESE L_CHAVE stm RETURN expression PONTO_VIRGULA R_CHAVE

    L_PARENTESE     shift and go to state 4


state 4

    (1) main -> INT MAIN L_PARENTESE . R_PARENTESE L_CHAVE stm RETURN expression PONTO_VIRGULA R_CHAVE

    R_PARENTESE     shift and go to state 5


state 5

    (1) main -> INT MAIN L_PARENTESE R_PARENTESE . L_CHAVE stm RETURN expression PONTO_VIRGULA R_CHAVE

    L_CHAVE         shift and go to state 6


state 6
